2010-06-18  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-:gnu-bts-email-address): New.
	(tinydebian-gnu-bts-email-compose): New.
	(tinydebian-gnu-bts-email-control): New.
	(tinydebian-bts-generic-email-control): Detect GNU debbugs.
	(tinydebian-emacs-gnu-type-p): New.
	(tinydebian-bug-report-generic-bts-mail): New.
	(tinydebian-bug-report-debian-bts-mail): Rename.
	(tinydebian-bts-mode): "Report a new bug" calls
	`tinydebian-bug-report-generic-bts-mail'.
	(tinydebian-bug-report-gnu-bts-mail): New.
	(tinydebian-system-os-debian-p): New.
	(tinydebian-bts-email-compose): Add GNU coreutils.
	(tinydebian-bug-gnu-bts-gnus-summary-p): New.
	(tinydebian-gnu-bts-bug-type-p): New.
	(tinydebian-bug-gnu-bts-buffer-p): New.
	(tinydebian-bug-gnu-bts-re-search-p): New.
	(tinydebian-bug-gnu-bts-re-search-email): New.
	(tinydebian-bug-gnu-bts-gnus-article-p): New.
	(tinydebian-bug-gnu-bts-gnus-summary-line-p): New.
	(tinydebian-gnu-bts-bug-url-compose): New.
	(tinydebian-:gnu-bts-url-http-bugs): New.
	(tinydebian-bug-gnu-emacs-bts-gnus-summary-line-p): Correct regexp.
	(tinydebian-bug-bts-type-determine): Detect GNU BTS.
	(tinydebian-bug-ask-bts-and-number): Add GNU BTS.
	(tinydebian-bts-url-bug-compose): Add GNU BTS.
	(tinydebian-bug-url-forward): Add check for Debian context.
	(tinydebian-bug-url-forward): Add GNU BTS. Clean MIME "3D" from URL.
	(tinydebian-reportbug): Point to `tinydebian-bug-report-generic-bts-mail',
	not just Debian.
	(tinydebian-bug-report-launchpad-mail): New.
	(tinydebian-launchpad-email-control): New.
	(tinydebian-launchpad-email-compose): New.
	(tinydebian-:launchpad-email-address): New.
	(tinydebian-:launchpad-status-list): New.
	(tinydebian-:launchpad-importance-list): New.
	(tinydebian-bug-report-debian-bts-mail): Remove confirmation question.
	(tinydebian-bug-report-gnu-bts-mail):  Remove confirmation question.
	(tinydebian-bug-browse-url-main-interactive): Correct bug number handling.